--- a/lib/process-services-cloud/src/lib/i18n/en.json
+++ b/lib/process-services-cloud/src/lib/i18n/en.json
@@ -5,7 +5,7 @@
       "SUBTITLE": "Create a new process that you want to easily find later",
       "NONE": "No process instance filter selected."
     },
-    "START_PROCESS": {
+    "ADF_CLOUD_START_PROCESS": {
       "BUTTON": "Start Process",
       "NO_PROCESS_DEFINITIONS": "You can't start a process as there are no process definitions available",
       "FORM": {
